# sensor_api

./: .gitignore  CMakeLists.txt  README.md  main.c
Source/: CMakeLists.txt  main.c
Source/Api/: CMakeLists.txt  sensor_LTC2943.c
Source/Drivers/: CMakeLists.txt  i2c.c
include/: i2c.h  sensor_LTC2943.h
include/Drivers/: i2c.h
